corrected header tag spacing and after positioning

--- a/src/style.css
+++ b/src/style.css
@@ -71,10 +71,10 @@ body {
 .is-active::after {
   position: absolute;
   content: "";
-  width: 100%;
   height: 4px;
   background-color: #00acdc;
   border-radius: 8px;
   left: 0;
   bottom: 0;
+  right: 0;
 }
